# OpenLRM

./: .gitignore  pyproject.toml
lrm/: cam_utils.py  trainer.py
lrm/models/training/: data.py  loss.py
