[tool.poetry]
name = "openlrm"
version = "0.1.0"
description = ""
authors = ["Nico Graf <ncograf@gmail.com>"]
license = "LICENCE"
readme = "README.md"
packages = [
    {include = "*", from = "lrm"},
]

[tool.poetry.dependencies]
python = "~3.10"
torch = {version = "^2.1.2", source = "torch"}
transformers = "^4.36.2"
omegaconf = "^2.3.0"
pillow = "^10.1.0"
imageio = "^2.33.1"
pymcubes = "^0.1.4"
trimesh = "^4.0.8"
imageio-ffmpeg = "^0.4.9"
matplotlib = "^3.8.2"
opencv-python = "^4.8.1.78"
icecream = "^2.1.3"
lpips = "^0.1.4"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
